<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cc1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--    <ImageView-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="match_parent"-->
        <!--        android:adjustViewBounds="false"-->
        <!--        android:contentDescription="@null"-->
        <!--        android:scaleType="fitXY"-->
        <!--        android:src="@drawable/tile_background" />-->

        <RelativeLayout
            tools:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:paddingTop="16.0dip"
            android:weightSum="1.0">

            <!--        <Button-->
            <!--            android:id="@+id/action_simple_mode"-->
            <!--            style="?android:buttonStyleSmall"-->
            <!--            android:layout_width="@dimen/button_width"-->
            <!--            android:layout_height="@dimen/button_width"-->
            <!--            android:layout_alignParentStart="true"-->
            <!--            android:layout_alignParentLeft="true"-->
            <!--            android:layout_marginStart="24dp"-->
            <!--            android:layout_marginLeft="24dp"-->
            <!--            android:background="@drawable/shape_gradient"-->
            <!--            android:clickable="true"-->
            <!--            android:text="88888888888888888888888888888"-->
            <!--            android:textColor="#ffffffff"-->
            <!--            android:textSize="13.0sp"-->
            <!--            android:textStyle="italic" />-->

            <!--        <Button-->
            <!--            android:id="@+id/b2"-->
            <!--            style="?android:buttonStyleSmall"-->
            <!--            android:layout_width="@dimen/button_width"-->
            <!--            android:layout_height="@dimen/button_width"-->
            <!--            android:layout_alignParentEnd="true"-->
            <!--            android:layout_alignParentRight="true"-->
            <!--            android:layout_marginEnd="24dp"-->
            <!--            android:layout_marginRight="24dp"-->
            <!--            android:background="@drawable/shape_gradient"-->
            <!--            android:clickable="true"-->
            <!--            android:focusable="true"-->
            <!--            android:text="xxxxxxxxxxxxxxxx"-->
            <!--            android:textColor="#ffffffff"-->
            <!--            android:textSize="13.0sp"-->
            <!--            android:textStyle="italic" />-->
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center"
            android:weightSum="1.0"
            android:baselineAligned="false">

            <!--        <Button-->
            <!--            android:id="@+id/moreApps"-->
            <!--            style="?android:buttonStyleSmall"-->
            <!--            android:layout_width="0.0dip"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginTop="10.0dip"-->
            <!--            android:layout_weight="0.26"-->
            <!--            android:background="@drawable/gradient"-->
            <!--            android:clickable="true"-->
            <!--            88888="onClickMoreApps"-->
            <!--            android:text="More Apps"-->
            <!--            android:textColor="#ffffffff"-->
            <!--            android:textSize="20.0sp"-->
            <!--            android:textStyle="italic"-->
            <!--            android:focusable="true" />-->

            <!--        <Button-->
            <!--            android:id="@+id/sub"-->
            <!--            style="?android:buttonStyleSmall"-->
            <!--            android:layout_width="0.0dip"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginTop="10.0dip"-->
            <!--            android:layout_weight="0.26"-->
            <!--            android:background="@drawable/gradient"-->
            <!--            android:clickable="true"-->
            <!--            88888="onClickSub"-->
            <!--            android:text="No Ads"-->
            <!--            android:textColor="#ffffffff"-->
            <!--            android:textSize="20.0sp"-->
            <!--            android:textStyle="italic"-->
            <!--            android:focusable="true" />-->

            <LinearLayout
                android:id="@+id/linin"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:orientation="horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll1"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:textColor="@android:color/white"
                tools:text="@string/vibration_time" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:textColor="@android:color/white"
                tools:text="@string/wait_time" />
        </LinearLayout>

    </RelativeLayout>


    <ImageView
        android:id="@+id/imgAnim"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@null"
        android:src="@drawable/circle_img1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgAnim2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@null"
        android:src="@drawable/circle_img2"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <io.feeeei.circleseekbar.CSeekBar
        android:id="@+id/sb1"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:wheel_reached_color="#FF76DD"
        app:wheel_unreached_width="32dp" />

    <io.feeeei.circleseekbar.CSeekBar
        android:id="@+id/sb2"
        android:layout_width="216dp"
        android:layout_height="216dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:wheel_pointer_color="@color/colorPrimaryDark"
        app:wheel_pointer_radius="8dp"
        app:wheel_reached_color="@color/colorAccent"
        app:wheel_reached_width="32dp"
        app:wheel_unreached_color="#FF00D6" />

    <Button
        android:id="@+id/vibratorTestBtn"
        style="?android:buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="120dp"

        android:layout_centerInParent="true"
        android:layout_marginTop="0.0dip"
        android:background="@drawable/shape_gradient"
        android:clickable="true"
        android:focusable="true"

        android:text="@string/action_start"
        android:textColor="#ffffffff"
        android:textSize="32.0sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>